--- a/final_project/src/styles/Viz.scss
+++ b/final_project/src/styles/Viz.scss
@@ -9,8 +9,9 @@ section{
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
 
-    // TITLES 
+    // ATTRIBUTES NAMES
     #c1-r1{
+        // attribute: fought in civil war
         grid-column: 2/3;
         grid-row: 1/2;
         // font-size: 3em;
@@ -18,6 +19,7 @@ section{
         justify-self: center;
     }
     #c2-r1 {
+        // attribute: drug trade
         grid-column: 3/4;
         grid-row: 1/2;
         // font-size: 3em;
@@ -25,20 +27,42 @@ section{
         justify-self: center;
     }
 
+
+    // REGION NAMES
+
     #c1-r2 {
+        // region: latin america
         grid-column: 1/2;
         grid-row: 2/3;
         // font-size: 3em;
         margin-top: 5em;
         justify-self: top;
     }
+    #c1-r3 {
+        // region: latin america
+        grid-column: 1/2;
+        grid-row: 3/4;
+        // font-size: 3em;
+        margin-top: 5em;
+        justify-self: top;
+    }
 
-    // SVG rebel groups
+
+
+    // SVGS 
     #c2-r2{
+        // latin america - fought in civil war
         grid-column: 2/3;
         grid-row: 2/3;
-        font-size: 3em;
         justify-self: center;
+        border:3px solid blue;
+    }
+    #c2-r3{
+        // latin america - fought in civil war
+        grid-column: 2/3;
+        grid-row: 3/4;
+        justify-self: center;
+        border:3px solid blue;
     }
     path{
         transform: scale(.5);
