--- a/final_project/src/styles/styles.scss
+++ b/final_project/src/styles/styles.scss
@@ -2,6 +2,11 @@
     font-family: Cosi-Times-Bold;
     src: url(../styles/fonts/CosiTimes-Bold.ttf);
 }
+
+@font-face {
+    font-family: HK-Grotesk-Light;
+    src: url(../styles/fonts/HkGrotesk-Light.ttf);
+}
 @import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@600&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100;600&display=swap');
 
