--- a/final_project/src/styles/styles.scss
+++ b/final_project/src/styles/styles.scss
@@ -20,6 +20,7 @@ html{
     background-color: #F3F3F1;
     border: 10px solid black;
     height: auto;
+    padding: 2em;
     margin: 1em;
     // font-family: Cosi-Times-Bold;
 }
