--- a/final_project/src/styles/Viz.scss
+++ b/final_project/src/styles/Viz.scss
@@ -2,16 +2,19 @@
 
 section{
     height: 900vh;
+    // border: 3px solid purple;
 }
 
 .grid-viz{
     transform: rotate(-5deg);
     margin-top: 4em;
+    margin-left: 4em;
     font-family:  HK-Grotesk-Light;
     border: 2px solid salmon;
     height: 100%;
+    width: 90%;
     display:grid;
-    grid-template-columns: 90px 250px 200px 1fr 1fr;
+    grid-template-columns: 90px 250px 200px 200px 200px 200px 200px;
     grid-template-rows: 70px 100px 100px 100px 100px 100px 100px 100px 100px;
 
     // ATTRIBUTES NAMES
@@ -25,6 +28,30 @@ section{
     #c2-r1 {
         // attribute: transitioned to organized crime
         grid-column: 3/4;
+        grid-row: 1/2;
+        text-align: center;
+    }
+    #c3-r1 {
+        // attribute: transitioned to organized crime
+        grid-column: 4/5;
+        grid-row: 1/2;
+        text-align: center;
+    }
+    #c4-r1 {
+        // attribute: transitioned to organized crime
+        grid-column: 5/6;
+        grid-row: 1/2;
+        text-align: center;
+    }
+    #c5-r1 {
+        // attribute: transitioned to organized crime
+        grid-column: 6/7;
+        grid-row: 1/2;
+        text-align: center;
+    }
+    #c6-r1 {
+        // attribute: transitioned to organized crime
+        grid-column: 7/8;
         grid-row: 1/2;
         text-align: center;
     }
@@ -222,6 +249,108 @@ section{
         justify-self: center;
     }
     
+    // ATTRIBUTE 3
+
+    #c4-r2{
+        // latin america - from organized crime to resistence
+        grid-column: 4/5;
+        grid-row: 2/3;
+        justify-self: center;
+        // border:3px solid greenyellow;
+    }
+    #c4-r3{
+        // africa- from organized crime to resistence
+        grid-column: 4/5;
+        grid-row: 3/4;
+        justify-self: center;
+    }
+    #c4-r4{
+        // mid eastern africa- tfrom organized crime to resistence
+        grid-column: 4/5;
+        grid-row: 4/5;
+        justify-self: center;
+    }    
+    #c4-r5{
+        // west - from organized crime to resistence
+        grid-column: 4/5;
+        grid-row: 5/6;
+        justify-self: center;
+    }
+    #c4-r6{
+        // central eurasia - from organized crime to resistence
+        grid-column: 4/5;
+        grid-row: 6/7;
+        justify-self: center;
+    }
+    #c4-r7{
+        // south asia - from organized crime to resistence
+        grid-column: 4/5;
+        grid-row: 7/8;
+        justify-self: center;
+    }
+    #c4-r8{
+        // south east asia - from organized crime to resistence
+        grid-column: 4/5;
+        grid-row: 8/9;
+        justify-self: center;
+    }
+    #c4-r9{
+        //  east asia - from organized crime to resistence
+        grid-column: 4/5;
+        grid-row: 9/10;
+        justify-self: center;
+    }
+
+    // ATTRIBUTE 4
+    #c5-r2{
+        // latin america - from organized crime to resistence
+        grid-column: 5/6;
+        grid-row: 2/3;
+        justify-self: center;
+        // border:3px solid greenyellow;
+    }
+    #c5-r3{
+        // africa- from organized crime to resistence
+        grid-column: 5/6;
+        grid-row: 3/4;
+        justify-self: center;
+    }
+    #c5-r4{
+        // mid eastern africa- tfrom organized crime to resistence
+        grid-column: 5/6;
+        grid-row: 4/5;
+        justify-self: center;
+    }    
+    #c5-r5{
+        // west - from organized crime to resistence
+        grid-column: 5/6;
+        grid-row: 5/6;
+        justify-self: center;
+    }
+    #c5-r6{
+        // central eurasia - from organized crime to resistence
+        grid-column: 5/6;
+        grid-row: 6/7;
+        justify-self: center;
+    }
+    #c5-r7{
+        // south asia - from organized crime to resistence
+        grid-column: 5/6;
+        grid-row: 7/8;
+        justify-self: center;
+    }
+    #c5-r8{
+        // south east asia - from organized crime to resistence
+        grid-column: 5/6;
+        grid-row: 8/9;
+        justify-self: center;
+    }
+    #c5-r9{
+        //  east asia - from organized crime to resistence
+        grid-column: 5/6;
+        grid-row: 9/10;
+        justify-self: center;
+    }
 
 }
 
