--- a/final_project/src/styles/Viz.scss
+++ b/final_project/src/styles/Viz.scss
@@ -14,8 +14,8 @@ section{
     height: 100%;
     width: 90%;
     display:grid;
-    grid-template-columns: 90px 250px 200px 200px 200px 200px 200px;
-    grid-template-rows: 70px 100px 100px 100px 100px 100px 100px 100px 100px;
+    grid-template-columns: 50px 180px 180px 180px 180px 180px 180px;
+    grid-template-rows: 70px 70px 70px 70px 70px  70px  70px 70px 70px ;
 
     // ATTRIBUTES NAMES
     #c1-r1{
@@ -61,11 +61,11 @@ section{
     .region-title{
         transform: rotate(-90deg);
         align-self: flex-end;
-        font-size: 8pt;
+        font-size: 6pt;
         cursor: crosshair;
     }
     h5{
-        font-size: 8pt;
+        font-size: 6pt;
         cursor: crosshair;
         justify-self: center;
     }
@@ -75,21 +75,29 @@ section{
         grid-row: 2/3;
         padding-top: 1em;
         justify-self: top;
+        text-align: center;
         // border: 2px solid black;
     }
     #c1-r3 {
         // region: africa
         grid-column: 1/2;
         grid-row: 3/4;
+        padding-top: 1em;
+        text-align: center;
         // border: 2px solid black;
     }
     #c1-r4 {
         // region: mid eastern africa
+        
         grid-column: 1/2;
         grid-row: 4/5;
         padding-top: 1em;
-        text-align: center;
-        // border: 2px solid black;s
+        // text-align: center;
+        // border: 2px solid black;
+
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        hyphens: auto;
     }
     #c1-r5 {
         // region: west
@@ -144,56 +152,56 @@ section{
         grid-column: 2/3;
         grid-row: 2/3;
         justify-self: center;
-        // border:3px solid red;
+        // border:1px solid gray;
     }
     #c2-r3{
         // africa - fought in civil war
         grid-column: 2/3;
         grid-row: 3/4;
         justify-self: center;
-        // border:3px solid blue;
+        // border:1px solid gray;
     }
     #c2-r4{
         // mid eastern africa - fought in civil war
         grid-column: 2/3;
         grid-row: 4/5;
         justify-self: center;
-        // border:3px solid yellow;
+        // border:1px solid gray;
     }
     #c2-r5{
         // west - fought in civil war
         grid-column: 2/3;
         grid-row: 5/6;
         justify-self: center;
-        // border:3px solid blue;
+        // border:1px solid gray;
     }
     #c2-r6{
         // central eurasia - fought in civil war
         grid-column: 2/3;
         grid-row: 6/7;
         justify-self: center;
-        // border:3px solid orange;
+        // border:1px solid gray;
     }
     #c2-r7{
         // south asia - fought in civil war
         grid-column: 2/3;
         grid-row: 7/8;
         justify-self: center;
-        // border:3px solid purple;
+        // border:1px solid gray;
     }
     #c2-r8{
         // south east asia - fought in civil war
         grid-column: 2/3;
         grid-row: 8/9;
         justify-self: center;
-        // border:3px solid pink;
+        // border:1px solid gray;
     }
     #c2-r9{
         // east asia - fought in civil war
         grid-column: 2/3;
         grid-row: 9/9;
         justify-self: center;
-        // border:3px solid green;
+        // border:1px solid gray;
     }
 
     path{
