--- a/final_project/src/styles/Viz.scss
+++ b/final_project/src/styles/Viz.scss
@@ -5,12 +5,24 @@ section{
     // border: 3px solid purple;
 }
 
+
+.tooltip{
+    font-family: Anek Devanagari;
+    font-size: 10pt;
+    border: 2px solid black;
+    width: 200px;
+    box-shadow: 10px 10px;
+}
+.tooltip-title{
+    text-decoration: underline;
+}
+
 .grid-viz{
     transform: rotate(-5deg);
     margin-top: 4em;
     margin-left: 4em;
     font-family:  HK-Grotesk-Light;
-    border: 2px solid salmon;
+    // border: 2px solid salmon;
     height: 100%;
     width: 90%;
     display:grid;
@@ -205,7 +217,7 @@ section{
     }
 
     path{
-        transform: scale(.4);
+        transform: scale(.5);
     }
     #c3-r2{
         // latin america - transitioned to organized crime
