--- a/final_project/src/styles/styles.scss
+++ b/final_project/src/styles/styles.scss
@@ -7,6 +7,20 @@
     font-family: HK-Grotesk-Light;
     src: url(../styles/fonts/HkGrotesk-Light.ttf);
 }
+
+@font-face {
+    font-family: Anthropocene-Thin;
+    src: url(../styles/fonts/Anthropocene-Thin.otf);
+}
+@font-face {
+    font-family: Anthropocene-Bold;
+    src: url(../styles/fonts/Anthropocene-Bold.otf);
+}
+
+
+
+
+
 @import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@600&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100;600&display=swap');
 
