--- a/final_project/src/styles/ProjectOverview.scss
+++ b/final_project/src/styles/ProjectOverview.scss
@@ -1,8 +1,14 @@
 @import './styles.scss';
 
 .overview{
-    width: 40%;
-    font-size: 8pt;
-    font-family: Anek Devanagari;
-    color: #737373;
+    width: 60%;
+    font-size: 10pt;
+    font-family: Anthropocene-Thin;
+    // color: #a2a1a1;
+    color:black;
+    line-height: 24pt;
+}
+#data-source{
+    font-size: 6pt;
+    line-height: 13pt;
 }
